--- a/src/content/graphos/graphs/securing-a-subgraph.mdx
+++ b/src/content/graphos/graphs/securing-a-subgraph.mdx
@@ -1,25 +1,33 @@
 ---
-title: Securing a subgraph
+title: Securing subgraphs
 description: With GraphOS
 ---
 
-It's important that subgraphs are [not directly accessible](/federation/building-supergraphs/subgraphs-overview/#securing-your-subgraphs) from anything except your Router. This article is a step-by-step guide to securing a subgraph when using [GraphOS Cloud Routing](/graphos/routing/cloud).
+To keep your supergraph secure, it's important that your individual subgraphs are [queried  _only_ by your router](/federation/building-supergraphs/subgraphs-overview/#securing-your-subgraphs). That's because your subgraphs expose powerful fields that the router uses to execute operations across them. External clients should _not_ have access to these fields.
 
-## 1. Create a secret
+This article describes steps for securing your subgraphs when using a [cloud supergraph](/graphos/routing/cloud).
 
-The key to authenticating requests to your subgraph is to have a secret token which only the router and the subgraph know. There are many ways to generate a random secret, for example, your password manager should have a "generate password" function which can serve the role.
+> As with all changes, we recommend first performing these steps for a _non-production_ variant of your supergraph.
 
-For completeness, here are some commands that will generate a suitably random secret if you have the appropriate tool installed:
+## 1. Generate a shared secret
 
-1. `openssl rand -base64 256`
-2. `python -c "import secrets; print(secrets.token_urlsafe(256))"`
-3. `node -e "console.log(require('crypto').randomBytes(256).toString('base64'));"`
+To restrict subgraph communication to _only_ your router, we recommend creating a separate **shared secret** for _each_ of your subgraphs. Whenever your router queries a subgraph, it includes that subgraph's corresponding secret in an HTTP header.
 
-## 2. Add the secret to the router config
+You can generate a random secret using a variety of tools. For example, most password managers provide this functionality.
 
-Within the variant settings for your graph, there is a "Cloud Routing" section. In this section, you can add a new secret as well as configure that secret to be used for a specific subgraph (see [Managing secrets](/graphos/routing/cloud-configuration#managing-secrets) for more info).
+Here are some shell commands that generate a suitably random secret if you have the corresponding tool installed:
 
-We recommend creating one secret per subgraph, and using the header name `Router-Authorization`, like this:
+- `openssl rand -base64 256`
+- `python -c "import secrets; print(secrets.token_urlsafe(256))"`
+- `node -e "console.log(require('crypto').randomBytes(256).toString('base64'));"`
+
+## 2. Add the secret to your router config
+
+Your cloud supergraph's router needs to know the shared secret so it can include it in all requests to the corresponding subgraph. You add the secret in the **Cloud Routing** section of your graph variant's Settings page.
+
+> For details, see [Managing secrets](/graphos/routing/cloud-configuration#managing-secrets).
+
+After you define the secret, you can inject its value into your router's configuration as an environment variable, as shown below. We recommend setting the value in a header named `Router-Authorization` (and again, create a separate secret _for each subgraph_):
 
 ```yaml
 headers:
@@ -38,10 +46,23 @@ headers:
 
 ## 3. Configure the subgraph to require the secret
 
-The configuration of the subgraph is going to depend greatly on your framework and hosting provider. Typically, there will be a way to save the secret in your hosting provider and have it injected as an environment variable to your subgraph. Then, you will read this environment variable in your subgraph and enforce authentication using it. All the [templates from Rover](/graphos/graphs/creating-a-subgraph#starting-from-a-template) have this functionality built in—just make sure to set the `ROUTER_SECRET` environment variable. If you already have a subgraph, you can look at the relevant template code for an example.
+The exact steps you take to require the shared secret in your subgraph depend on:
 
-[//]: # (TODO: Update the templates to do this!)
+- The language and framework your subgraph uses
+- The service you use to host your subgraph
 
-## 4. Test it
+Most cloud providers include a mechanism for saving secrets that are then made available to your application as environment variables. Your subgraph should read the secret from an environment variable and reject any incoming requests that _don't_ include that secret in the specified header.
 
-First, verify that your Router can still query the subgraph by running a query which includes fields from that subgraph in Apollo Studio. Then, try to query the subgraph directly (e.g., via [Apollo Studio Sandbox](/graphos/explorer/sandbox)) and verify that you get an error.
+> All subgraph templates [provided by the Rover CLI](/graphos/graphs/creating-a-subgraph#starting-from-a-template) include this functionality out of the box. To use it, set the value of the `ROUTER_SECRET` environment variable.
+>
+> If you have an existing subgraph that wasn't created from a template, you can check a similar template's source code for an example.
+
+
+## 4. Test the configuration
+
+After adding the shared secret to both your router _and_ subgraph, do the following to confirm that communication has been secured as intended:
+
+1. Verify that your router _can_ still communicate with the subgraph by executing a test query against the router from the Explorer.
+    - Make sure the query includes at least one field from the relevant subgraph!
+2. Verify that other clients _can't_ communicate with the subgraph by executing a test query _against the subgraph directly_.
+    - This query should fail with an authorization error.
