--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -269,7 +269,7 @@ You might want to do this if you need to include specific headers in every reque
 </td>
 <td>
 
-By default, the embedded Explorer uses your variant's **Include cookies** setting, which you configure from the _non_-emedded Explorer in Studio.
+By default, the embedded Explorer uses your variant's **Include cookies** setting, which you configure from the _non_-embedded Explorer in Studio.
 
 You can set `includeCookies` to `true` if you instead want the Explorer to pass `{ credentials: 'include' }` for its requests.
 
