add collection & operation id to explorer as well

--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -399,6 +399,32 @@ initialState: {
 </td>
 </tr>
 
+<tr>
+<td>
+
+##### `collectionId` & `operationId`
+
+`string`
+
+</td>
+<td>
+
+The id of a collection, paired with an operation id to populate in the Explorer on load.
+You can find these values in your Studio Explorer by clicking on the ... next to an operation
+you want to embed & selecting 'Copy operation & collection ids'.
+
+Example:
+
+```jsx
+initialState: {
+  collectionId: 'abc1234',
+  operationId: 'xyz1234'
+}
+```
+
+</td>
+</tr>
+
 </tbody>
 </table>
 
