poll for schema updates

--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -463,5 +463,28 @@ initialState: {
 </td>
 </tr>
 
+<tr>
+<td>
+
+##### `pollForSchemaUpdates`
+
+`boolean`
+
+</td>
+<td>
+
+Optional. Defaults to true. If you don't want the embedded Sandbox to poll against your `initialEndpoint` for schema updates, pass `false` here.
+
+Example:
+
+```jsx
+initialState: {
+  pollForSchemaUpdates: true
+}
+```
+
+</td>
+</tr>
+
 </tbody>
 </table>
